[tool.poetry]
name = "nonebot-plugin-yinying-chat"
version = "2.0"
description = "A nonebot plugin for yinying-chat"
authors = ["Yuanluo <3313512421@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.1"
aiohttp = "^3.8.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true 


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
